openturns/1.20/_sources/auto_data_analysis/distribution_fitting/index.rst.txt


.. _sphx_glr_auto_data_analysis_distribution_fitting:

.. _Distribution fitting:

Distribution fitting
--------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a distribution by maximum likelihood">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_maximumlikelihood_estimator_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_maximumlikelihood_estimator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a distribution by maximum likelihood</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a parametric distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_normal_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_normal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a parametric distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Model a singular multivariate distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_model_singular_multivariate_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_model_singular_multivariate_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Model a singular multivariate distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Define a distribution from quantiles">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_quantilematching_estimator_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_quantilematching_estimator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Define a distribution from quantiles</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Get the asymptotic distribution of the estimators">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_asymptotic_estimators_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_asymptotic_estimators_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get the asymptotic distribution of the estimators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Bandwidth sensitivity in kernel smoothing">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_smoothing_mixture_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_smoothing_mixture.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bandwidth sensitivity in kernel smoothing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit an extreme value distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_fit_extreme_value_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_fit_extreme_value_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit an extreme value distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a conditional quantile">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_conditional_quantile_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_conditional_quantile.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a conditional quantile</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a multivariate distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_multivariate_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_multivariate_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a multivariate distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a non parametric distribution">

.. only:: html

  .. image:: /auto_data_analysis/distribution_fitting/images/thumb/sphx_glr_plot_estimate_non_parametric_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_distribution_fitting_plot_estimate_non_parametric_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a non parametric distribution</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_data_analysis/distribution_fitting/plot_maximumlikelihood_estimator
   /auto_data_analysis/distribution_fitting/plot_estimate_normal
   /auto_data_analysis/distribution_fitting/plot_model_singular_multivariate_distribution
   /auto_data_analysis/distribution_fitting/plot_quantilematching_estimator
   /auto_data_analysis/distribution_fitting/plot_asymptotic_estimators_distribution
   /auto_data_analysis/distribution_fitting/plot_smoothing_mixture
   /auto_data_analysis/distribution_fitting/plot_fit_extreme_value_distribution
   /auto_data_analysis/distribution_fitting/plot_estimate_conditional_quantile
   /auto_data_analysis/distribution_fitting/plot_estimate_multivariate_distribution
   /auto_data_analysis/distribution_fitting/plot_estimate_non_parametric_distribution

